# casamelhor

./: .env  .gitignore  demo.json  manage.py  pyproject.toml  render.yaml  requirements.txt
casamelhor/: asgi.py  permissions.py  settings.py  urls.py  wsgi.py
casamelhor/account/: admin.py  apps.py  emails.py  forms.py  middleware.py  models.py  serializer.py  urls.py  views.py
casamelhor/account/migrations/: 0001_initial.py  0002_auto_20220602_1128.py  0003_auto_20220628_1229.py  0004_auto_20220630_1015.py  0005_auto_20220630_1046.py  0006_vault_ppoi.py  0007_auto_20220701_1009.py  0008_auto_20220810_0607.py  0009_alter_vault_user.py
casamelhor/account/templatetags/: i18n_address_tags.py
casamelhor/property/: admin.py  amenities_views.py  apps.py  forms.py  middleware.py  models.py  serializer.py  urls.py  views.py
casamelhor/property/migrations/: 0001_initial.py  0002_alter_amenities_name.py  0003_auto_20220706_1140.py  0004_auto_20220715_1252.py  0005_bookingproperty.py  0006_delete_bookingproperty.py  0007_alter_room_allow_booking_managers.py  0008_alter_room_allow_booking_managers.py  0009_auto_20220820_0922.py  0010_auto_20220822_1050.py  0011_auto_20220823_0928.py  0012_auto_20220826_0657.py  0013_auto_20220826_0730.py  0014_remove_booking_booking_id.py
templates/: index.html
templates/templated_email/account/: confirm.email
templates/templated_email/compiled/: confirm.html
