[tool.poetry]
name = "casamelhor"
version = "0.1.0"
description = ""
authors = ["Lokesh sahu <sles.shuban@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.9.3"
whitenoise = {extras = ["brotli"], version = "^6.1.0"}
gunicorn = "^20.1.0"
django-versatileimagefield = "^2.2"
Django = "3.2.13"
djangorestframework = "^3.13.1"
djangorestframework-simplejwt = "^5.2.0"
django-templated-email = "^3.0.0"
google-i18n-address = "^2.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
